--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 /* Whole Page Formatting */
 html {
-    background: url('http://i1383.photobucket.com/albums/ah287/YehEmily/Olin_College03_zpsynagujcd.png') no-repeat fixed;
+    background: url('https://image.ibb.co/bKyoPa/Olin_College03.png') no-repeat fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -160,8 +160,9 @@ div.right-floating-box {
 div.footer {
     padding: 1%;
     padding-left: 10%;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(0, 0, 0, 0.75);
     border-top: 0.1em solid white;
+    color: white;
 }
 
 /* Button Formatting */
@@ -221,7 +222,7 @@ button.close:hover {
 .modal-content {
     position: relative;
     background-color: #fefefe;
-    border-radius: 3em 3em 0 0;
+    border-radius: 3em;
     margin: auto;
     padding: 0;
     border: none;
@@ -276,7 +277,7 @@ button.close:hover {
     padding-right: 2em;
     padding-top: 0.1em;
     padding-bottom: 0.1em;
-    background-color: rgb(200, 200, 200);
+    background-color: rgb(255, 227, 137);
     color: black;
     border-radius: 3em 3em 0 0;
 }
@@ -286,7 +287,7 @@ button.close:hover {
     padding-right: 2em;
     padding-top: 0.1em;
     padding-bottom: 0.1em;
-    background-color: rgb(160, 160, 160);
+    background-color: rgb(165, 237, 255);
     color: black;
     border-radius: 3em 3em 0 0;
 }
@@ -296,7 +297,7 @@ button.close:hover {
     padding-right: 2em;
     padding-top: 0.1em;
     padding-bottom: 0.1em;
-    background-color: rgb(255, 120, 120);
+    background-color: rgb(178, 255, 147);
     color: black;
     border-radius: 3em 3em 0 0;
 }
@@ -311,6 +312,7 @@ button.close:hover {
     padding: 1%;
     background-color: white;
     color: black;
+    border-radius: 0 0 3em 3em;
 }
 
 /* Section Formatting */
